<resources>
    <string name="app_name">Place Locator</string>
    <string name="test">Test</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_yelp">Yelp</string>
    <!-- User Profile Strings -->
    <string name="menu_favorite">Favorite</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_my_location">My Location</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <!-- Others-->
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="open_location_settings">Enable GPS</string>
    <string name="gps_network_not_enabled">GPS is not enabled. Enable GPS to use application effectively.</string>
    <string name="cancel">Cancel</string>
    <string name="yelp_tag">Yelp</string>
    <string name="four_square_tag">Foursquare</string>
    <string name="google_places_tag">Google</string>
    <string name="zagat_square_tag">Zagat</string>
    <string name="search_results">Search Results</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="please_wait_progress">Please wait....</string>
    <!-- Place details related Strings -->
    <string name="street_title">Street View</string>
    <string name="website_title">Website</string>
    <string name="call_title">Call</string>
    <string name="favorite_title">Favorite</string>
    <string name="recent_title">Recent</string>
    <string name="more">More</string>
    <string name="today_timing">Today\'s timing: </string>
    <string name="monday">Monday: </string>
    <string name="tuesday">Tuesday: </string>
    <string name="wednesday">Wednesday: </string>
    <string name="thursday">Thursday: </string>
    <string name="friday">Friday: </string>
    <string name="saturday">Saturday: </string>
    <string name="sunday">Sunday: </string>
    <string name="photos">Photos</string>
    <string name="reviews">Reviews</string>
    <!-- Place details end -->
    <string name="error_dialog_title">Error</string>
    <string name="missing_street_view_error">Street view for this location is not available.</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="rating">Rating: %s</string>
    <string name="not_rated">Not rated</string>
    <string name="open">Open</string>
    <string name="closed">Closed now</string>
    <string name="more_close">close</string>
    <string name="permanently_closed">Permanently Closed</string>
    <string name="miles_notation">mi</string>
    <string name="kilometer_notation">km</string>
    <string name="review_poor">Poor</string>
    <string name="review_average">Average</string>
    <string name="review_good">Good</string>
    <string name="review_excellent">Excellent</string>

    <string name="custom_location">Custom location</string>
    <string name="clear">Clear</string>
    <string name="search_hint">Search...</string>
    <string name="invalid_response">Invalid server response</string>
    <string name="failed_response">Request failed. Please try again</string>
    <string name="review_count">%d Reviews</string>
    <string name="current_location">Current location</string>
    <string name="set_location">Set location</string>
    <string name="set_location_hint">Enter city name</string>
    <string name="set_search_hint">Enter search criteria</string>
    <string name="developer_id">globalfriends747@gmail.com</string>
    <string name="email_subject">Place Locator application feedback</string>
    <string name="network_error">Please check your network connection</string>
    <string name="no_more_results">No more results to display...</string>
    <string name="no_results">No places found.</string>
    <string name="updated">Updated</string>
    <string name="module_launch">Go to %s</string>
    <string name="error_zero_result">No results. Your place do not have any places registered with this TAG. To get results, Please change location and search again.</string>
    <string name="error_invalid_request">Invalid request. Please check your request.</string>
    <string name="error_request_denied">Request denied. Please check your request.</string>
    <string name="error_query_limit">Server limit exceeded. Please try after some time.</string>
    <string name="error_unknown_error">Server limit exceeded. Please leave a email to administrator or try after some time.</string>
    <string name="sorting_distance">Distance</string>
    <string name="sorting_rating">Rating</string>
    <string name="summary_rating_checkbox">Discard all places without any Google ratings.</string>
    <string name="title_rating_checkbox">Show rated places only</string>
    <string name="delayed_location_error">We are not able to determine your current location. Please wait for some time and try again.</string>
</resources>
