<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_my_location"
            android:icon="@drawable/ic_menu_maps"
            android:title="@string/menu_my_location" />
        <item
            android:id="@+id/drawer_recent"
            android:icon="@drawable/ic_menu_recent"
            android:title="@string/menu_recent" />
        <item
            android:id="@+id/drawer_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorite" />
    </group>

    <item android:title="Communicate">
        <group>
            <item
                android:id="@+id/drawer_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/drawer_feedback"
                android:icon="@drawable/ic_email"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/drawer_rate_us"
                android:icon="@drawable/rate_us"
                android:title="@string/menu_rate_us" />
        </group>
    </item>

</menu>