<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/menu_search"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_set_location"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/set_location" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/menu_settings" />
</menu>